tests/baselines/reference/typeParamExtendsOtherTypeParam.errors.txt
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(12,26): error TS2344: Type '{ b: 文字; }' does not satisfy the constraint '{ a: 文字; }'.
  Property 'a' is missing in type '{ b: 文字; }'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(13,26): error TS2344: Type '{ a: 数字; }' does not satisfy the constraint '{ a: 文字; }'.
  Types of property 'a' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(14,26): error TS2344: Type '{ b: 文字; }' does not satisfy the constraint '{ a: 文字; }'.
  Property 'a' is missing in type '{ b: 文字; }'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(15,26): error TS2344: Type '{ a: 数字; }' does not satisfy the constraint '{ a: 文字; }'.
  Types of property 'a' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(16,37): error TS2344: Type '{ a: 文字; }' does not satisfy the constraint '{ a: 文字; b: 数字; }'.
  Property 'b' is missing in type '{ a: 文字; }'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(17,37): error TS2344: Type '{ a: 文字; }' does not satisfy the constraint '{ a: 文字; b: 数字; }'.
  Property 'b' is missing in type '{ a: 文字; }'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(28,15): error TS2344: Type 'I1' does not satisfy the constraint 'I2'.
  Property 'b' is missing in type 'I1'.
tests/cases/compiler/typeParamExtendsOtherTypeParam.ts(29,15): error TS2344: Type 'I1' does not satisfy the constraint 'I2'.


==== tests/cases/compiler/typeParamExtendsOtherTypeParam.ts (8 errors) ====
    class A<T, U extends T> { }
    class B<T extends Object, U extends T> {
        data: A<Object, Object>;
    }
    
    // Below 2 should compile without error 
    var x: A< { a: string }, { a: string; b: number }>;
    var y: B< { a: string }, { a: string; b: number }>;
    
    
    // Below should be in error
    var x1: A<{ a: string;}, { b: string }>;
                             ~~~~~~~~~~~~~
!!! error TS2344: Type '{ b: 文字; }' does not satisfy the constraint '{ a: 文字; }'.
!!! error TS2344:   Property 'a' is missing in type '{ b: 文字; }'.
    var x2: A<{ a: string;}, { a: number }>;
                             ~~~~~~~~~~~~~
!!! error TS2344: Type '{ a: 数字; }' does not satisfy the constraint '{ a: 文字; }'.
!!! error TS2344:   Types of property 'a' are incompatible.
!!! error TS2344:     Type '数字' is not assignable to type '文字'.
    var x3: B<{ a: string;}, { b: string }>;
                             ~~~~~~~~~~~~~
!!! error TS2344: Type '{ b: 文字; }' does not satisfy the constraint '{ a: 文字; }'.
!!! error TS2344:   Property 'a' is missing in type '{ b: 文字; }'.
    var x4: B<{ a: string;}, { a: number }>;
                             ~~~~~~~~~~~~~
!!! error TS2344: Type '{ a: 数字; }' does not satisfy the constraint '{ a: 文字; }'.
!!! error TS2344:   Types of property 'a' are incompatible.
!!! error TS2344:     Type '数字' is not assignable to type '文字'.
    var x5: A<{ a: string; b: number }, { a: string }>;
                                        ~~~~~~~~~~~~~
!!! error TS2344: Type '{ a: 文字; }' does not satisfy the constraint '{ a: 文字; b: 数字; }'.
!!! error TS2344:   Property 'b' is missing in type '{ a: 文字; }'.
    var x6: B<{ a: string; b: number }, { a: string }>;
                                        ~~~~~~~~~~~~~
!!! error TS2344: Type '{ a: 文字; }' does not satisfy the constraint '{ a: 文字; b: 数字; }'.
!!! error TS2344:   Property 'b' is missing in type '{ a: 文字; }'.
    
    interface I1 {
        a: string;
    }
    
    interface I2 {
        a: string;
        b: number;
    }
    
    var x7: A<I2, I1>;
                  ~~
!!! error TS2344: Type 'I1' does not satisfy the constraint 'I2'.
!!! error TS2344:   Property 'b' is missing in type 'I1'.
    var x8: B<I2, I1>;
                  ~~
!!! error TS2344: Type 'I1' does not satisfy the constraint 'I2'.
    